deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
  labels:
    app: lazylibrarian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazylibrarian
  template:
    metadata:
      labels:
        app: lazylibrarian
    spec:
      containers:
      - name: lazylibrarian
        image: jmeritt/lazylibrarian
        imagePullPolicy: Always
        ports:
        - containerPort: 5299
        volumeMounts:
        - name: programdata
          mountPath: /programdata
        - name: ebooks
          mountPath: /ebooks
        - name: downloads
          mountPath: /downloads
        - name: config
          mountPath: /config
      volumes:
      - name: programdata
        emptyDir: {}
      - name: config
        emptyDir: {}
      - name: ebooks
        emptyDir: {}
      - name: downloads
        emptyDir: {}
      - name: config-src
        configMap: 
          name: lazylibrarian-config
