service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  labels:
    app: lazylibrarian
spec:
  ports:
  - port: 5299
    targetPort: 5299
  selector:
    app: lazylibrarian
