ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lazylibrarian
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: lazylibrarian.local
    http:
      paths:
      - path: /
        backend:
          serviceName: lazylibrarian
          servicePort: 5299
